fix: avoid clipping the cards drop shadow

--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,10 @@
   padding: 2rem;
 }
 
+.cards {
+  overflow: unset;
+}
+
 /* Generic Scrollable List */
 list {
   display: flex;
